src/objects/Apttus_Config2__BundleComponentView__c.object
<CustomObject>
    <description>Keeps the list references of component products related to the bundle and sub bundle</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines what records will be deleted after successfully creating new records.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BundleProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the bundle product id</description>
        <label>Bundle Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bundle Components</relationshipLabel>
        <relationshipName>SystemComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Depth__c</fullName>
        <description>Depth of the Component</description>
        <label>Depth</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentProductOptionComponentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent Product Option Component</description>
        <label>Parent Product Option Component</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipName>ChildSystemComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductOptionComponentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product option component associated with the system.</description>
        <label>Product Option Component</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipName>SystemComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bundle Component View</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>Apttus_Config2__BundleProductId__c</columns>
        <columns>Apttus_Config2__Depth__c</columns>
        <columns>Apttus_Config2__ParentProductOptionComponentId__c</columns>
        <columns>Apttus_Config2__ProductOptionComponentId__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>